force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/AN_No__c.field-meta.xml
<CustomField>
    <fullName>AN_No__c</fullName>
    <label>AN No</label>
    <type>TextArea</type>
</CustomField>