force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__Account_code_Selling__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Account_code_Selling__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account code Selling</label>
    <referenceTo>clofor_com_cfs__Chart_of_Accounts__c</referenceTo>
    <relationshipLabel>F/TMS Bill</relationshipLabel>
    <relationshipName>F_TMS_Bill</relationshipName>
    <type>Lookup</type>
</CustomField>