force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__AccountingCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AccountingCode__c</fullName>
    <formula>clofor_com_cfs__Tariff__r.clofor_com_cfs__Accounting_Code__r.Name</formula>
    <label>ACCOUNTING CODE</label>
    <type>Text</type>
</CustomField>