force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__actual_payer__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__actual_payer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Input the actual company name to which your company transferred the payment</inlineHelpText>
    <label>ACTUAL PAYMENT TRANSFERED TO-BUYING</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>actual_payer</relationshipName>
    <type>Lookup</type>
</CustomField>