force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__ADVANCE_PAYMENT_ON_BEHALF_OF__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ADVANCE_PAYMENT_ON_BEHALF_OF__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this button when Paid Advance but no need to add into VAT Invoice.</inlineHelpText>
    <label>ADVANCE PAYMENT ON BEHALF OF</label>
    <type>Checkbox</type>
</CustomField>