force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__AM_BuyInBefore_Allocation__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AM_BuyInBefore_Allocation__c</fullName>
    <formula>clofor_com_cfs__AM_MasterMeisaiID__r.clofor_com_cfs__BuyAmountJPN__c
/*BuyInTaxAmountJPY__c*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BUYING AMOUNT BEFORE ALLOCATION(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>