force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__AM_MasterID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AM_MasterID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CONSOL SHIPMENT NAME</label>
    <referenceTo>clofor_com_cfs__MasterAnken__c</referenceTo>
    <relationshipName>AM_MasterID</relationshipName>
    <type>Lookup</type>
</CustomField>