force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__AM_MasterMeisaiID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AM_MasterMeisaiID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Input the M B/L Buying ID corresponds with cost allocation category</inlineHelpText>
    <label>CONSOL SHIPMENT BUYING ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.clofor_com_cfs__AM_MasterID__c</field>
            <operation>equals</operation>
            <valueField>clofor_com_cfs__MasterAnkenMeisai__c.clofor_com_cfs__MasterAnken__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__MasterAnkenMeisai__c</referenceTo>
    <relationshipLabel>F/TMS BILL</relationshipLabel>
    <relationshipName>AM_MasterMeisaiID</relationshipName>
    <type>Lookup</type>
</CustomField>