force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__AM_MCBM__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AM_MCBM__c</fullName>
    <formula>clofor_com_cfs__AM_MasterID__r.clofor_com_cfs__MCBM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOTAL MEASURMENT AT MASTER B/L(CBM)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>