force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__AMOUNT_PAID_SELLING_USD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AMOUNT_PAID_SELLING_USD__c</fullName>
    <inlineHelpText>When this field is blank or &apos;0&apos; and Payment Confirmed-Selling is checked, Amount Selling including Tax(USD) is inserted to this field</inlineHelpText>
    <label>AMOUNT PAID-SELLING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>