force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__AmountBuyInclTax3rdCurrencyInput__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountBuyInclTax3rdCurrencyInput__c</fullName>
    <label>Amount Buy Incl Tax(3rd Currency)-Input</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>