force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__AmountBuyingIncTaxFCYInput__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountBuyingIncTaxFCYInput__c</fullName>
    <label>Amount Buying Incl Tax(FCY)-Input</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>