force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__AmountBuyingIncTaxLocalInput__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountBuyingIncTaxLocalInput__c</fullName>
    <label>Amount Buying Incl Tax(Local)-Input</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>