force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__AmountBuyingLocalAdjustment__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountBuyingLocalAdjustment__c</fullName>
    <label>AMOUNT BUYING(LOCAL)-ADJUSTMENT</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>