force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__AmountBuyingUSDAdjustment__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountBuyingUSDAdjustment__c</fullName>
    <label>AMOUNT BUYING(USD)-ADJUSTMENT</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>