force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__AmountofTaxBuying3rdCurrency__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountofTaxBuying3rdCurrency__c</fullName>
    <formula>ROUND(clofor_com_cfs__TotalAmountofBuying3rdCurrency__c * clofor_com_cfs__BuyTaxInitial__c,3)+ clofor_com_cfs__TaxBuying3rdCurrencyAdjust__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount of Tax-Buying(3rd Currency)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>