force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__AmountofTaxSelling3rdCurrency__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountofTaxSelling3rdCurrency__c</fullName>
    <formula>clofor_com_cfs__TotalAmountofSelling3rdCurrency__c *  clofor_com_cfs__TaxInitial__c 
 +clofor_com_cfs__TaxSelling3rdCurrencyAdjust__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount of Tax-Selling(3rd Currency)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>