force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__AmountSellingInclTax3rdCurrencyAdjust__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountSellingInclTax3rdCurrencyAdjust__c</fullName>
    <label>Amount Selling Incl Tax(3rd Currency)-Ad</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>