force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__Anken__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Anken__c</fullName>
    <label>H B/L SHIPMENT ID</label>
    <referenceTo>clofor_com_cfs__CustomObject1__c</referenceTo>
    <relationshipLabel>F/TMS BILL</relationshipLabel>
    <relationshipName>Anken</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>