force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__ApprovaStatusForBuying__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ApprovaStatusForBuying__c</fullName>
    <label>Approval Status for Buying</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__APPROVAL_STATUS</valueSetName>
    </valueSet>
</CustomField>