force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__BadDebt__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BadDebt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bad Debt</label>
    <referenceTo>clofor_com_cfs__BadDebt__c</referenceTo>
    <relationshipLabel>F/TMS BILL</relationshipLabel>
    <relationshipName>FMSBill</relationshipName>
    <type>Lookup</type>
</CustomField>