force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__BadDebtAging__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BadDebtAging__c</fullName>
    <formula>IF( AND(OR(clofor_com_cfs__SellDifferentiation__c &gt; 0, clofor_com_cfs__UNPAID_BALANCE_OF_SELLING_USD__c &gt; 0), today() - clofor_com_cfs__CollectionDueDate__c &gt; 0), today() - clofor_com_cfs__CollectionDueDate__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BAD DEBT AGING</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>