force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__BadDebtCheckBox__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BadDebtCheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BAD DEBT CHECKBOX</label>
    <type>Checkbox</type>
</CustomField>