force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__BankAccountForPayment__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BankAccountForPayment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK ACCOUNT FOR PAYMENT</label>
    <referenceTo>clofor_com_cfs__BankAccount__c</referenceTo>
    <relationshipName>INVOICING1</relationshipName>
    <type>Lookup</type>
</CustomField>