force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__Bikou__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Bikou__c</fullName>
    <inlineHelpText>If there were any information which should be shared in internal staffs, fill in this field</inlineHelpText>
    <label>NOTES</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>