force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__BuyDifferentiation__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BuyDifferentiation__c</fullName>
    <formula>clofor_com_cfs__BuyInTaxAmountJPY__c - clofor_com_cfs__Siharaigaku__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unpaid Balance of Buying(Local)=Amount Buying including Tax(Local)-Amount Paid-Buying(Local)</inlineHelpText>
    <label>UNPAID BALANCE OF BUYING</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>