force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__buying_debit_category_accouting__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__buying_debit_category_accouting__c</fullName>
    <label>BUYING-THE DEBIT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>仕入高</fullName>
                <label>COSTS</label>
            </value>
            <value>
                <fullName>買掛</fullName>
                <label>ACCOUNTS PAYABLE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>