force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__BuyingCreditAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BuyingCreditAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BUYING CREDIT ACCOUNTING CODE</label>
    <referenceTo>clofor_com_cfs__Accounting_Code__c</referenceTo>
    <relationshipName>BUYING_CREDIT</relationshipName>
    <type>Lookup</type>
</CustomField>