force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__BuyingVATDebitAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BuyingVATDebitAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BUYING VAT DEBIT ACCOUNTING CODE</label>
    <referenceTo>clofor_com_cfs__Accounting_Code__c</referenceTo>
    <relationshipName>BuyingVATDebitAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>