force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__BuyInTaxAmountUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BuyInTaxAmountUSD__c</fullName>
    <formula>clofor_com_cfs__BuyAmountUSD__c + clofor_com_cfs__BuyTaxNum_USD__c + clofor_com_cfs__AmountBuyingUSDAdjustment__c
/* till Jan 4 , 2019
clofor_com_cfs__BuyAmountUSD__c * (1 + clofor_com_cfs__BuyTaxInitial__c) + clofor_com_cfs__USDTaxAdjustment__c

*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMOUNT BUYING INCLUDING TAX(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>