force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__BuyTankaUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BuyTankaUSD__c</fullName>
    <inlineHelpText>This field is input automatically if there is no manual input. 1. It will refer the amount in Unit Price of Buying(USD) in Service Master Object. 2. If not, take the amount =Unit Price of Buying(Local)/Exchange Rate-Buying.</inlineHelpText>
    <label>UNIT PRICE OF BUYING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>