force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__BuyTaxNum_USD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BuyTaxNum_USD__c</fullName>
    <formula>ROUND(clofor_com_cfs__BuyAmountUSD__c * clofor_com_cfs__BuyTaxInitial__c,3) + clofor_com_cfs__USDTaxAdjustment__c
/*
/*
IF (clofor_com_cfs__Tariff__r.clofor_com_cfs__wkTaxFlag__c,
clofor_com_cfs__BuyAmountUSD__c * clofor_com_cfs__BuyTaxInitial__c + clofor_com_cfs__USDTaxAdjustment__c + clofor_com_cfs__TAX_ADJUSTMENT__c,
0
)
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMOUNT OF TAX-BUYING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>