force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__BuyTaxShow__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BuyTaxShow__c</fullName>
    <formula>IF( OR(clofor_com_cfs__ProductTax__c = &apos;課税&apos;,clofor_com_cfs__ProductTax__c = &apos;TAX(課税)&apos;)  ,clofor_com_cfs__BuyTaxInitial__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONSUMPTION TAX FOR CALCULATION-BUYING</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>