force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__BY_PASS_VALIDATION_RULE__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BY_PASS_VALIDATION_RULE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BY PASS VALIDATION RULE</label>
    <type>Checkbox</type>
</CustomField>