force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__Cargo_status_is_changed__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Cargo_status_is_changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cargo status is changed</label>
    <type>Checkbox</type>
</CustomField>