force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__ChargeUnitInPrint__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ChargeUnitInPrint__c</fullName>
    <label>Charge Unit in Print</label>
    <length>100</length>
    <type>Text</type>
</CustomField>