force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__ContainerID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContainerID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CONTAINER ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.clofor_com_cfs__Anken__c</field>
            <operation>equals</operation>
            <valueField>clofor_com_cfs__Container_Info__c.clofor_com_cfs__HBL_SHIPMENT__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__Container_Info__c</referenceTo>
    <relationshipName>INVOICING</relationshipName>
    <type>Lookup</type>
</CustomField>