force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__ContainerSize__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContainerSize__c</fullName>
    <inlineHelpText>Set a Container Size in case different from Container Size in Service.</inlineHelpText>
    <label>Container Size</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>clofor_com_cfs__ChargeUnit__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__ContainerType</valueSetName>
    </valueSet>
</CustomField>