force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__ContainerSizeFormula__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContainerSizeFormula__c</fullName>
    <formula>IF(TEXT( clofor_com_cfs__ContainerSize__c ) != NULL 
, TEXT( clofor_com_cfs__ContainerSize__c ) 
, TEXT( clofor_com_cfs__Tariff__r.clofor_com_cfs__ContainerSize__c )
)</formula>
    <label>Container Size-Formula</label>
    <type>Text</type>
</CustomField>