force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__Cost_Allocation_Margin_USD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Cost_Allocation_Margin_USD__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Use to add/deduct when Total of Unit Price of Buying is different from Total Buying After Allocation-Checking</description>
    <label>Cost Allocation Margin USD</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>