force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__CountOfOfConnectedTrxPlan__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CountOfOfConnectedTrxPlan__c</fullName>
    <label>Count of Connected Trx Plan</label>
    <summaryForeignKey>clofor_com_cfs__FMSBillPayReq__c.clofor_com_cfs__FMSBillID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>