force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__curr__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__curr__c</fullName>
    <inlineHelpText>Only available Currency can be chosen. Available Currency1:Local Currency chosen in LOCAL CURRENCY in CloFor Initial Setting. Available Currency2:USD</inlineHelpText>
    <label>CURR</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VND</fullName>
                <default>true</default>
                <label>VND</label>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>KHR</fullName>
            </value>
            <value>
                <fullName>JPY</fullName>
            </value>
            <value>
                <fullName>KRW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>