force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__Debit_Summary__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Debit_Summary__c</fullName>
    <formula>Name +&apos;|&apos;+  clofor_com_cfs__InsatuyouSyohinEng__c +&apos;|&apos;+ clofor_com_cfs__ChargeUnitInPrint__c +&apos;|&apos;+  TEXT(clofor_com_cfs__UNPAID_BALANCE_OF_BUYING_USD__c)  +&apos;|&apos;+  TEXT( clofor_com_cfs__SellTankaJPY__c 
) +&apos;|&apos;+ IF(ISBLANK( clofor_com_cfs__OutboundVATInvNo__c ), clofor_com_cfs__OutboundVATInvNo__c , &apos;blank&apos;)</formula>
    <label>Debit Summary</label>
    <type>Text</type>
</CustomField>