force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__DebitNo__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DebitNo__c</fullName>
    <label>Debit No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>