force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__Description__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Description__c</fullName>
    <inlineHelpText>This will appear in Debit Note to local customer.</inlineHelpText>
    <label>DESCRIPTION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>