force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__DUE_DATE_OF_PAYMENT_EXCLUDE_TAX__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DUE_DATE_OF_PAYMENT_EXCLUDE_TAX__c</fullName>
    <label>DUE DATE OF PAYMENT - EXCLUDE TAX</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>