force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__ExchangeRateBuyingUpdate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ExchangeRateBuyingUpdate__c</fullName>
    <label>EXCHANGE RATE BUYING-UPDATE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__ExchangeRateBuyingUpdate</valueSetName>
    </valueSet>
</CustomField>