force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__ExchangeRateIDVAT__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ExchangeRateIDVAT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EXCHANGE RATE ID-VAT</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>clofor_com_cfs__MgmtMaster__c.clofor_com_cfs__Mgmt_Exrate_Validity__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>clofor_com_cfs__MgmtMaster__c.clofor_com_cfs__Mgmt_Exrate_Validity__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__MgmtMaster__c</referenceTo>
    <relationshipLabel>F/TMS BILL (EXCHANGE RATE ID-VAT)</relationshipLabel>
    <relationshipName>BILLING_FMS_TMS</relationshipName>
    <type>Lookup</type>
</CustomField>