force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__InsatuyouSyohinEng__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__InsatuyouSyohinEng__c</fullName>
    <inlineHelpText>Used for Quotation or Debit/Credit for partners.</inlineHelpText>
    <label>PRICING NAME AT PRINT(ENG)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>