force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__Invoice_Destination_Type__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Invoice_Destination_Type__c</fullName>
    <label>Invoice Destination Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>