force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__Invoiceto_type__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Invoiceto_type__c</fullName>
    <formula>text(clofor_com_cfs__Seikyusaki__r.clofor_com_cfs__Custom_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CATEGORY OF INVOICE TO</label>
    <type>Text</type>
</CustomField>